fix: fixing all typo and pengecekan comment disabled